--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "spatie/pdf-to-image": "^3.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
