--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "konva": "^9.3.15",
         "react-icons": "^5.3.0",
         "react-konva": "^18.2.10",
+        "react-router-dom": "^6.27.0",
         "react-table": "^7.8.0",
         "use-image": "^1.1.1"
     }
