--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "datatables.net": "^2.1.8",
         "datatables.net-dt": "^2.1.8",
         "konva": "^9.3.15",
+        "react-flip-page": "^1.6.4",
         "react-icons": "^5.3.0",
         "react-konva": "^18.2.10",
         "react-router-dom": "^6.27.0",
