--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-APP_NAME=Laravel
+APP_NAME=Learneez
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pM/r5/tAOLVqBoEgjfUXRVR02cvJxzUwKHX3cyDm/gQ=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Europe/Sofia
+APP_URL=http://10.1.31.203
 
 APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_FALLBACK_LOCALE=AWS_USE_PATH_STYLE_ENDPOINTAPP_FAKER_LOCALE=en_US
+
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
@@ -24,9 +25,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example_inertia
+DB_DATABASE=ExampleInertia
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -48,14 +49,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=mail.learneez.eu
+MAIL_PORT=465
+MAIL_USERNAME=info@learneez.eu
+MAIL_PASSWORD="24@#EmaLe@r-nu5"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info@learneez.eu
+MAIL_FROM_NAME="Learneez"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
