For documentation print

--- a/.env.example
+++ b/.env.example
@@ -50,13 +50,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.learneez.eu
-MAIL_PORT=465
-MAIL_USERNAME=info@learneez.eu
-MAIL_PASSWORD="24@#EmaLe@r-nu5"
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=info@learneez.eu
-MAIL_FROM_NAME="Learneez"
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
 
 
 AWS_ACCESS_KEY_ID=
